src/objects/Letter_Print_Request__c.object
<CustomObject>
    <fields>
        <fullName>Acknowledgment_Type__c</fullName>
        <label>Acknowledgment Type</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Hard Copy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Attachment_ID__c</fullName>
        <externalId>true</externalId>
        <label>Attachment ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Run_Sequence__c</fullName>
        <label>Batch Run Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>Zuora__CustomerAccount__c</referenceTo>
        <relationshipLabel>Letter Print Requests</relationshipLabel>
        <relationshipName>Letter_Print_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DTL_Date__c</fullName>
        <description>This field is for Acknowledgement letter. Check if subscriptions have same DTL date</description>
        <label>DTL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Generation__c</fullName>
        <label>Date of Generation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Downloaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Downloaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filename__c</fullName>
        <label>Filename</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generation_From__c</fullName>
        <label>Generation From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Generation_To__c</fullName>
        <label>Generation To</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Language_Medium__c</fullName>
        <label>Language Medium</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_Sub_Type__c</fullName>
        <label>Letter Sub Type</label>
        <picklist>
            <picklistValues>
                <fullName>Overseas Newspaper - Report Hard Copy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overseas Newspaper - Wrapper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazine Internal - Wrapper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airline Subscription - Report Hard Copy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airline Subscription - Wrapper</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Letter_Type__c</fullName>
        <label>Letter Type</label>
        <picklist>
            <picklistValues>
                <fullName>Acknowledgment Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card Failure Notification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Renewal Reminder for Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Second Renewal Reminder for Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Renewal Reminder for Newspaper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Second Renewal Reminder for Newspaper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Notes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent_Letter_Print_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Letter Print Request</label>
        <referenceTo>Letter_Print_Request__c</referenceTo>
        <relationshipLabel>Letter Print Requests</relationshipLabel>
        <relationshipName>Letter_Print_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Printable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Printable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <label>Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Email__c</fullName>
        <label>Status Email</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Successful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Successful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Created_Date__c</fullName>
        <label>Sub Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Letter Print Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Billing_Account__c</columns>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Letter_Type__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Record_ID__c</columns>
        <columns>Status_Email__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Invoice_Letter</fullName>
        <columns>NAME</columns>
        <columns>Attachment_ID__c</columns>
        <columns>Batch_Run_Sequence__c</columns>
        <columns>Letter_Type__c</columns>
        <columns>Status__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Record_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Date_of_Generation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Letter_Type__c</field>
            <operation>equals</operation>
            <value>Invoice_Letter</value>
        </filters>
        <filters>
            <field>Record_ID__c</field>
            <operation>contains</operation>
            <value>a0FN0000008w8RO</value>
        </filters>
        <label>Invoice Letter</label>
    </listViews>
    <listViews>
        <fullName>haz</fullName>
        <columns>NAME</columns>
        <columns>Letter_Sub_Type__c</columns>
        <columns>Letter_Type__c</columns>
        <columns>Generation_From__c</columns>
        <columns>Record_ID__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Letter_Type__c</field>
            <operation>equals</operation>
            <value>Credit Card Failure Notification</value>
        </filters>
        <label>Haz- Airline Report Hard Copy</label>
    </listViews>
    <listViews>
        <fullName>spuli</fullName>
        <columns>NAME</columns>
        <columns>Attachment_ID__c</columns>
        <columns>Printable__c</columns>
        <columns>Record_ID__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Email__c</columns>
        <columns>Type__c</columns>
        <columns>Letter_Type__c</columns>
        <columns>Email_Address__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Downloaded__c</columns>
        <columns>Acknowledgment_Type__c</columns>
        <columns>Letter_Sub_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Letter_Type__c</field>
            <operation>contains</operation>
            <value>INV</value>
        </filters>
        <filters>
            <field>Record_ID__c</field>
            <operation>contains</operation>
        </filters>
        <label>spuli</label>
    </listViews>
    <nameField>
        <label>Letter Print Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Letter Print Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>